One more field added

--- a/Employee.html
+++ b/Employee.html
@@ -15,6 +15,10 @@
             <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
+            <td>Place:</td>
+            <td>Alappey</td>
+        </tr>
+        <tr>
             <td>Employee code:</td>
             <td><input type="text" class="form-control"></td>
         </tr>
